--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     },
     "autoload":{
         "psr-4": {
-            "App\\" : "./clases"
+            "Model\\" : "./models",
+            "MVC\\" : "./",
+            "Controllers\\" : "./controllers"
         }
+        
     }
 }
