--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "Creando un proyecto con POO",
     "type": "project",
     "require": {
-        "intervention/image": "^2.7"
+        "intervention/image": "^2.7",
+        "phpmailer/phpmailer": "^6.5",
+        "psr/log": "^3.0"
     },
     "autoload":{
         "psr-4": {
